Fixing path issues

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -447,6 +447,8 @@
     "parameter: region_list = path\n",
     "# Path to the work directory of the weight computation: output weights and cache will be saved to this directory.\n",
     "parameter: wd = path('./')\n",
+    "# Path to list of weights\n",
+    "parameter: weights_list = f'{wd:a}/WEIGHTS/{molecular_pheno:bn}.weights_list.txt'\n",
     "# Specify the output of Association test only result, stored under wd by default\n",
     "parameter: assoc_test_result = f'{wd}/result'\n",
     "# Specify the column in the molecular_pheno file that contains chromosome\n",
@@ -462,16 +464,14 @@
     "# Specify the scanning window for the up and downstream radius to analyze around the region of interest, in units of Kb\n",
     "parameter: window = 50000\n",
     "\n",
-    "\n",
-    "\n",
     "# Specify what model are used to compute weights.\n",
     "# Notice that `blsmm` can be very resource consuming.\n",
     "parameter: model = ['blsmm', 'blup' , 'lasso', 'top1', 'enet']\n",
     "# Container option for software to run the analysis: docker or singularity\n",
     "parameter: container = 'gaow/twas'\n",
     "# Get regions of interest to focus on.\n",
-    "regions = [x.strip().split() for x in open(region_list).readlines() if x.strip()]\n",
-    "geno_inventory = dict([x.strip().split() for x in open(genotype_list).readlines() if x.strip()])\n",
+    "regions = [x.strip().split() for x in open(region_list).readlines() if x.strip() and not x.strip().startswith('#')]\n",
+    "geno_inventory = dict([x.strip().split() for x in open(genotype_list).readlines() if x.strip() and not x.strip().startswith('#')])\n",
     "\n",
     "import os\n",
     "def get_genotype_file(chrom, genotype_list, geno_inventory):\n",
@@ -489,44 +489,86 @@
     "        else:\n",
     "            geno_file = f'{genotype_list:ad}/' + geno_file\n",
     "    geno_file = geno_file.split(\".b\",1)[0]\n",
-    "    return f'{geno_file}'\n",
+    "    return f'{geno_file}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## FIXME: add explanation what this step is\n",
     "\n",
+    "Comments & FIXME:\n",
+    "\n",
+    "1. This step should not allow for any errors. In general, we should not bypass errors, but rather face and fix them if they are under our control. I therefore changed `cat` to `stop`. In the future please try to avoid using allow error.\n",
+    "2. I added `#` to the header of region_list file and skipped any lines starting with `#`. Please see global section `regions` variable.\n",
+    "3. Notice the use of `:a` -- please always use that to make output files absolute paths. Then it would not matter where your work directory is. You only have to do it for the very first step of the workflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "[cptWgt_1]\n",
     "\n",
     "input: molecular_pheno, for_each = \"regions\"\n",
-    "output: f'{wd}/cache/{_input:bn}.{_regions[3]}.exp',\n",
-    "        f'{wd}/cache/{_input:bn}.{_regions[3]}.pheno'\n",
-    "skip_if(_regions[3] == \"Gene_Symbol\")\n",
+    "output: f'{wd:a}/cache/{_input:bn}.{_regions[3]}.exp',\n",
+    "        f'{wd:a}/cache/{_input:bn}.{_regions[3]}.pheno'\n",
     "\n",
-    "R: expand = \"$[ ]\", workdir=wd,allow_error=True,stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout'\n",
+    "R: expand = \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container\n",
     "    # Get the line number for the region in the file\n",
     "    line_num = system(\"awk '($$[region_name]==\\\"$[_regions[3]]\\\") {print NR}' $[_input]\", intern=T)\n",
     "    if (length(line_num) == 0){\n",
-    "      cat( \"Cannot find $[_regions[3]] in column $[region_name]  $[_input]\")}\n",
+    "      stop( \"Cannot find $[_regions[3]] in column $[region_name]  $[_input]\")}\n",
     "    yi <- data.table::fread(file = $[_input:r], skip = as.integer(line_num) - 1, nrows = 1)\n",
     "    samplenames_yi <- data.table::fread(file = $[_input:r], skip = 0, nrows = 1)\n",
     "    colnames(yi) <- colnames(samplenames_yi)\n",
     "    readr::write_tsv(yi, path = \"$[_output[0]]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")\n",
-    "    # FIXME: this -1:-5 is also hard-coded maybe we should make it a parameter option to drop a few columns before transpose\n",
     "    yi <- as.data.frame(yi[, $[data_start]:ncol(yi), drop = FALSE])\n",
     "    yj <- rbind(colnames(yi),colnames(yi),yi)\n",
-    "    readr::write_tsv(as.data.frame(t(yj)), path = \"$[_output[1]]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")\n",
-    "  \n",
+    "    readr::write_tsv(as.data.frame(t(yj)), path = \"$[_output[1]]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## FIXME: please document it briefly\n",
+    "\n",
+    "Again, we should not allow error unless absolutely necessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "[cptWgt_2]\n",
     "\n",
     "input: group_by = 2\n",
-    "output: f'{_input[1]:n}.bed',\n",
-    "        f'{_input[1]:n}.bim',\n",
-    "        f'{_input[1]:n}.fam'\n",
+    "output: f'{_input[0]:n}.bed',\n",
+    "        f'{_input[0]:n}.bim',\n",
+    "        f'{_input[0]:n}.fam'\n",
     "# look up for genotype file first\n",
     "chrom = get_output(f'cut -f {region_chrom} {_input[0]} | tail -1 | uniq').strip(\"\\n\")\n",
     "geno_file = get_genotype_file(chrom,genotype_list,geno_inventory)\n",
     "start = get_output(f'cut -f {region_start} {_input[0]} | tail -1 | uniq').strip(\"\\n\")\n",
     "end = get_output(f'cut -f {region_end} {_input[0]} | tail -1 | uniq').strip(\"\\n\")\n",
     "\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', allow_error=True, workdir=wd, container = container\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container\n",
     "    ##### Get the locus genotypes for each samples\n",
-    "    `which plink` --bfile $[geno_file] \\\n",
+    "    plink --bfile $[geno_file] \\\n",
     "    --pheno $[_input[1]] \\\n",
     "    --make-bed \\\n",
     "    --out $[_output[0]:n] \\\n",
@@ -534,16 +576,33 @@
     "    --from-bp $[int(start) + window ] \\\n",
     "    --to-bp $[int(end) - window ] \\\n",
     "    --keep $[_input[1]] \\\n",
-    "    --allow-no-sex\n",
-    "    #touch $[_output] # this will touch all files in output\n",
-    "    \n",
+    "    --allow-no-sex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## FIXME: please document it briefly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "#Actual weight computation \n",
     "[cptWgt_3]\n",
-    "output: f'{wd}/WEIGHTS/{_input[0]:bn}.wgt.RDat'\n",
+    "output: f'{wd:a}/WEIGHTS/{_input[0]:bn}.wgt.RDat'\n",
     "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
     "\n",
-    "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', active = (os.path.getsize(f'{_input[0]}') != 0), workdir=wd, container = container\n",
+    "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', container = container\n",
     "    FUSION.compute_weights.R \\\n",
     "    --bfile $[_input[0]:n] \\\n",
     "    --tmp $[_input[0]:n].tmp \\\n",
@@ -554,40 +613,75 @@
     "    --PATH_gemma `which gemma` \\\n",
     "    --models \"$[\",\".join(model)]\"   \n",
     "    ## Creat dummy output file that will be deleted next step\n",
-    "    touch $[_output[0]]\n",
-    "    \n",
+    "    touch $[_output[0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## FIXME: Please document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "[cptWgt_4]\n",
-    "import os\n",
-    "# FIXME: please use group_by = 'all' here, to organize your hsq file and the position file\n",
     "input: group_by = \"all\"\n",
     "# Lets not loops over sequential substep, but loop inside one.\n",
-    "output: f'{wd}/WEIGHTS/{molecular_pheno:bn}.pos'\n",
+    "output: weights_list\n",
     "# using the dummy in R can avoid the error risen when dummy = get_output() provide empty space\n",
     "\n",
-    "R: expand= \"$[ ]\", workdir = wd, stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout'\n",
-    "    if(require(\"dplyr\")){library(dplyr)}else{install.packages(\"dplyr\")}\n",
-    "    if(require(\"tibble\")){library(dplyr)}else{install.packages(\"tibble\")}\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container\n",
+    "    library(dplyr)\n",
     "    dummy = system(\"find $[_input] -size 0\")\n",
     "    wgt = c($[_input:br,])\n",
     "    wgt = wgt[!(wgt%in%dummy)]\n",
     "  \n",
     "    get_info = function(wgt_file){\n",
-    "    wgt_info = paste(\"./cache/\",wgt_file%>%strsplit(\".wgt.RDat\"),\".exp\", sep = \"\")%>%readr::read_delim(delim = \"\\t\")\n",
-    "    wgt_info = wgt_info%>%select(ID = colnames(wgt_info)[$[region_name]], CHR = colnames(wgt_info)[$[region_chrom]],P0 = colnames(wgt_info)[$[region_start]], P1 = colnames(wgt_info)[$[region_end]])\n",
-    "    return(wgt_info)  \n",
+    "        wgt_info = paste(\"$[wd]/cache/\",wgt_file%>%strsplit(\".wgt.RDat\"),\".exp\", sep = \"\")%>%readr::read_delim(delim = \"\\t\")\n",
+    "        wgt_info = wgt_info%>%select(ID = colnames(wgt_info)[$[region_name]], CHR = colnames(wgt_info)[$[region_chrom]],P0 = colnames(wgt_info)[$[region_start]], P1 = colnames(wgt_info)[$[region_end]])\n",
+    "        return(wgt_info)  \n",
     "    }\n",
     "  \n",
     "    pos = c(1,2,3,4,5)\n",
     "    for(i in 1:length(wgt)){\n",
+    "      print(wgt[i])\n",
     "      info = get_info(wgt[i])\n",
     "      fullinfo = cbind(WGT = wgt[i],info)\n",
     "      pos = rbind(pos,fullinfo)\n",
     "    }\n",
     "    pos = pos[2:nrow(pos),]\n",
-    "    pos%>%readr::write_tsv( path = \"$[_output]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")\n",
+    "    pos%>%readr::write_tsv( path = \"$[_output]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## FIXME: please document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "# Association test\n",
     "[cptWgt_5,assocTest]\n",
-    "depends: sos_step('cptWgt_4')\n",
+    "depends: weights_list\n",
     "\n",
     "chrom_list = get_output(f'cut -f 3 {_input} | tail -n+2').strip().split(\"\\n\")\n",
     "chrom_list = list(set(chrom_list))\n",
@@ -597,127 +691,46 @@
     "\n",
     "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
     "geno_prefix = geno_file.split(f'.{_chrom_list}',1)[0]\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', workdir = f'{wd}/WEIGHTS/', container = container\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container\n",
     "    FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
-    "    --weights ./$[molecular_pheno:bn].pos \\\n",
+    "    --weights $[weights_list] \\\n",
     "    --weights_dir ./ \\\n",
     "    --ref_ld_chr $[geno_prefix]. \\\n",
     "    --chr $[_chrom_list] \\\n",
-    "    --out $[_output]\n",
+    "    --out $[_output]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## FIXME: please document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "# Clean up dummy file\n",
     "[cptWgt_6]\n",
     "input: group_by = \"all\"\n",
-    "output: f'{wd}/error_gene/no_plink.txt',\n",
-    "        f'{wd}/error_gene/no_wgt_computed.txt'\n",
-    "bash: expand= \"$[ ]\", allow_error=True, workdir = wd\n",
-    "    find ./cache/*.bim -size 0 -print > $[_output[0]]\n",
-    "    rm `find ./cache/*.bim -size 0`\n",
-    "    rm `find ./cache/*.fam -size 0`\n",
-    "    rm `find ./cache/*.bed -size 0`\n",
-    "    find ./WEIGHTS/*.wgt.RDat -size 0 -print > $[_output[1]]\n",
-    "    rm `find ./WEIGHTS/*.wgt.RDat -size 0`    \n"
+    "output: f'{wd:a}/error_no_plink.log',\n",
+    "        f'{wd:a}/error_no_wgt_computed.log'\n",
+    "bash: expand= \"$[ ]\"\n",
+    "    find $[wd:a]/cache/*.bim -size 0 -print > $[_output[0]]\n",
+    "    rm `find $[wd:a]/cache/*.bim -size 0`\n",
+    "    rm `find $[wd:a]/cache/*.fam -size 0`\n",
+    "    rm `find $[wd:a]/cache/*.bed -size 0`\n",
+    "    find $[wd:a]/WEIGHTS/*.wgt.RDat -size 0 -print > $[_output[1]]\n",
+    "    rm `find $[wd:a]/WEIGHTS/*.wgt.RDat -size 0`    "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bash: 1+3: command not found\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
@@ -751,7 +764,7 @@
      "sos"
     ]
    ],
-   "version": "0.20.1"
+   "version": "0.21.13"
   }
  },
  "nbformat": 4,
