Upload FUSION.assoc_test.R and fix paths

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -543,7 +543,9 @@
    "source": [
     "## FIXME: please document it briefly\n",
     "\n",
-    "Again, we should not allow error unless absolutely necessary."
+    "Here we use `|| true` to bypass any errors (it ensures return status of the command is always `0`)\n",
+    "\n",
+    "Notice the use of `group_with` which removes the need to extract region information from previous output files."
    ]
   },
   {
@@ -555,28 +557,25 @@
    "outputs": [],
    "source": [
     "[cptWgt_2]\n",
-    "\n",
-    "input: group_by = 2\n",
+    "input: group_by = 2, group_with = 'regions'\n",
     "output: f'{_input[0]:n}.bed',\n",
     "        f'{_input[0]:n}.bim',\n",
     "        f'{_input[0]:n}.fam'\n",
-    "# look up for genotype file first\n",
-    "chrom = get_output(f'cut -f {region_chrom} {_input[0]} | tail -1 | uniq').strip(\"\\n\")\n",
-    "geno_file = get_genotype_file(chrom,genotype_list,geno_inventory)\n",
-    "start = get_output(f'cut -f {region_start} {_input[0]} | tail -1 | uniq').strip(\"\\n\")\n",
-    "end = get_output(f'cut -f {region_end} {_input[0]} | tail -1 | uniq').strip(\"\\n\")\n",
+    "# look up for genotype file\n",
+    "geno_file = get_genotype_file(_regions[0],genotype_list,geno_inventory)\n",
     "\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container\n",
-    "    ##### Get the locus genotypes for each samples\n",
+    "    ##### Get the locus genotypes for $[_regions[3]]\n",
     "    plink --bfile $[geno_file] \\\n",
     "    --pheno $[_input[1]] \\\n",
     "    --make-bed \\\n",
     "    --out $[_output[0]:n] \\\n",
-    "    --chr $[chrom] \\\n",
-    "    --from-bp $[int(start) + window ] \\\n",
-    "    --to-bp $[int(end) - window ] \\\n",
+    "    --chr $[_regions[0]] \\\n",
+    "    --from-bp $[int(_regions[1]) + window ] \\\n",
+    "    --to-bp $[int(_regions[2]) - window ] \\\n",
     "    --keep $[_input[1]] \\\n",
-    "    --allow-no-sex"
+    "    --allow-no-sex || true\n",
+    "    touch $[_output]"
    ]
   },
   {
@@ -585,7 +584,11 @@
     "kernel": "SoS"
    },
    "source": [
-    "## FIXME: please document it briefly"
+    "## FIXME: please document it briefly\n",
+    "\n",
+    "Comment: Notice in the docker file, I ended up using the original `FUSION.compute_weights.R` in the docker file. Your modified version of `FUSION.compute_weights.R` is unnecessary, and has hard-coded path `./output` which is not desiable. The original script in fact works without a problem with my current version of pipeline\n",
+    "\n",
+    "The take home lesson is that for path issues please always try to fix at pipeline level, not changing the core code for it. You should let pipeline tools take care of path issue because one feature of such tools is management of various paths."
    ]
   },
   {
@@ -598,11 +601,12 @@
    "source": [
     "#Actual weight computation \n",
     "[cptWgt_3]\n",
+    "input: group_with = 'regions'\n",
     "output: f'{wd:a}/WEIGHTS/{_input[0]:bn}.wgt.RDat'\n",
     "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
     "\n",
-    "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', container = container\n",
+    "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', volumes=[f'{wd:a}:{wd:a}'], container = container\n",
     "    FUSION.compute_weights.R \\\n",
     "    --bfile $[_input[0]:n] \\\n",
     "    --tmp $[_input[0]:n].tmp \\\n",
@@ -613,7 +617,7 @@
     "    --PATH_gemma `which gemma` \\\n",
     "    --models \"$[\",\".join(model)]\"   \n",
     "    ## Creat dummy output file that will be deleted next step\n",
-    "    touch $[_output[0]]"
+    "    touch $[_output]"
    ]
   },
   {
@@ -622,7 +626,9 @@
     "kernel": "SoS"
    },
    "source": [
-    "## FIXME: Please document"
+    "## FIXME: Please document\n",
+    "\n",
+    "Comment: it's a lot cleaner to just code with SoS (using python syntax). See example below where I rewrote your R code"
    ]
   },
   {
@@ -637,29 +643,15 @@
     "input: group_by = \"all\"\n",
     "# Lets not loops over sequential substep, but loop inside one.\n",
     "output: weights_list\n",
-    "# using the dummy in R can avoid the error risen when dummy = get_output() provide empty space\n",
-    "\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container\n",
-    "    library(dplyr)\n",
-    "    dummy = system(\"find $[_input] -size 0\")\n",
-    "    wgt = c($[_input:br,])\n",
-    "    wgt = wgt[!(wgt%in%dummy)]\n",
-    "  \n",
-    "    get_info = function(wgt_file){\n",
-    "        wgt_info = paste(\"$[wd]/cache/\",wgt_file%>%strsplit(\".wgt.RDat\"),\".exp\", sep = \"\")%>%readr::read_delim(delim = \"\\t\")\n",
-    "        wgt_info = wgt_info%>%select(ID = colnames(wgt_info)[$[region_name]], CHR = colnames(wgt_info)[$[region_chrom]],P0 = colnames(wgt_info)[$[region_start]], P1 = colnames(wgt_info)[$[region_end]])\n",
-    "        return(wgt_info)  \n",
-    "    }\n",
-    "  \n",
-    "    pos = c(1,2,3,4,5)\n",
-    "    for(i in 1:length(wgt)){\n",
-    "      print(wgt[i])\n",
-    "      info = get_info(wgt[i])\n",
-    "      fullinfo = cbind(WGT = wgt[i],info)\n",
-    "      pos = rbind(pos,fullinfo)\n",
-    "    }\n",
-    "    pos = pos[2:nrow(pos),]\n",
-    "    pos%>%readr::write_tsv( path = \"$[_output]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")"
+    "import os\n",
+    "weight_files = [str(x) for x in _input if not os.path.getsize(x) == 0]\n",
+    "regions_dict = dict([(x[3], (x[0], x[1], x[2])) for x in regions])\n",
+    "res = [[\"WGT\", \"ID\",\"CHR\",\"P0\",\"P1\"]]\n",
+    "for item in weight_files:\n",
+    "    name = os.path.basename(item).rstrip('wgt.RDat').lstrip(f'.{molecular_pheno:bn}')\n",
+    "    res.append([item,name,regions_dict[name][0], regions_dict[name][1], regions_dict[name][2]])\n",
+    "with open(_output, 'w') as f:\n",
+    "    f.write('\\n'.join(['\\t'.join(x) for x in res]))"
    ]
   },
   {
@@ -690,13 +682,12 @@
     "output:f'{assoc_test_result}/{molecular_pheno:bn}_{_chrom_list}.dat'\n",
     "\n",
     "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
-    "geno_prefix = geno_file.split(f'.{_chrom_list}',1)[0]\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container\n",
     "    FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
     "    --weights $[weights_list] \\\n",
-    "    --weights_dir ./ \\\n",
-    "    --ref_ld_chr $[geno_prefix]. \\\n",
+    "    --weights_dir / \\\n",
+    "    --ref_ld_chr $[geno_file]. \\\n",
     "    --chr $[_chrom_list] \\\n",
     "    --out $[_output]"
    ]
