Fix the last path issue and finalize workflow

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -425,9 +425,7 @@
    "source": [
     "## FIXME: please document it briefly\n",
     "\n",
-    "Comment: Notice in the docker file, I ended up using the original `FUSION.compute_weights.R` in the docker file. Your modified version of `FUSION.compute_weights.R` is unnecessary, and has hard-coded path `./output` which is not desiable. The original script in fact works without a problem with my current version of pipeline\n",
-    "\n",
-    "The take home lesson is that for path issues please always try to fix at pipeline level, not changing the core code for it. You should let pipeline tools take care of path issue because one feature of such tools is management of various paths."
+    "Comment: Your modified version of `FUSION.compute_weights.R` has hard-coded path `./output` which is not desiable. I have changed it to use `dirname(output)`"
    ]
   },
   {
@@ -445,7 +443,7 @@
     "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
     "\n",
-    "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', volumes=[f'{wd:a}:{wd:a}'], container = container\n",
+    "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', container = container\n",
     "    FUSION.compute_weights.R \\\n",
     "    --bfile $[_input[0]:n] \\\n",
     "    --tmp $[_input[0]:n].tmp \\\n",
@@ -482,7 +480,6 @@
    "source": [
     "[twas_fusion_4]\n",
     "input: group_by = \"all\"\n",
-    "# Lets not loops over sequential substep, but loop inside one.\n",
     "output: weights_list\n",
     "import os\n",
     "weight_files = [x for x in _input if not os.path.getsize(x) == 0]\n",
@@ -490,8 +487,8 @@
     "res = [[\"WGT\", \"ID\",\"CHR\",\"P0\",\"P1\",\"HSQ1\",\"HSQ2\",\"HSQ3\"]]\n",
     "for item in weight_files:\n",
     "    name = f'{item:bnn}'.lstrip(f'.{molecular_pheno:bn}')\n",
-    "    hsq = [x.strip().split() for x in open(f\"{item:nn}.hsq\").readlines() if x.strip()]\n",
-    "    res.append([str(item),name,regions_dict[name][0], regions_dict[name][1], regions_dict[name][2]], hsq[1], hsq[2], hsq[3])\n",
+    "    hsq = open(f\"{item:nn}.hsq\").read().strip().split()\n",
+    "    res.append([str(item),name,regions_dict[name][0], regions_dict[name][1], regions_dict[name][2], hsq[1], hsq[2], hsq[3]])\n",
     "with open(_output, 'w') as f:\n",
     "    f.write('\\n'.join(['\\t'.join(x) for x in res]))"
    ]
@@ -530,7 +527,7 @@
     "    --sumstats $[_input] \\\n",
     "    --weights $[weights_list] \\\n",
     "    --weights_dir / \\\n",
-    "    --ref_ld_chr $[geno_file]. \\\n",
+    "    --ref_ld_chr $[geno_file] \\\n",
     "    --chr $[_chrom_list] \\\n",
     "    --out $[_output]"
    ]
