--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -30,17 +30,22 @@
    "source": [
     "## Overview\n",
     "\n",
-    "To Compute association between expression and SNP for TWAS analysis.\n",
-    "SNP can modulate the functional phenotypes both directly and by modulating the expression levels of genes. \n",
-    "Therefore, the integration of expression measurements and a larger scale GWAS summary association statistics will be desirable to identify the genes associated with the targeted complex traits. \n",
+    "__Objective__: \n",
+    "    To Compute the association between expression and SNP for TWAS analysis.\n",
     "\n",
-    "By the application of this method, new candidates genes whose expression level is significantly associated to complex traits can be used in prediction without actually going through the expensive gene expression measurement process. As a relatively small set of gene expression and genotyping data can be used to impute the expression for a much larger set of phenotyped individuals from their SNP genotype data. \n",
+    "__Background__:\n",
+    "    SNP can modulate the functional phenotypes both directly and by modulating the expression levels of genes. \n",
+    "Therefore, the integration of expression measurements and a larger scale GWAS summary association statistics will help identify the genes associated with the targeted complex traits. \n",
     "\n",
-    "The imputed expression can then be viewed as a linear model of genotypes with __weights based on the correlation between SNPs and gene expression__ in the training data while accounting for linkage disequilibrium (LD) among SNPs. We then correlated the imputed gene expression to the trait to perform a transcriptome-wide association study (TWAS) and identify __significant expression-trait associations__. \n",
+    "__Significance__:\n",
+    "    By applying this method, new candidate genes whose expression level is significantly associated with complex traits can be used in prediction without actually going through the expensive gene expression measurement process. As a relatively small set of gene expression and genotyping, data can be used to impute the expression for a much larger set of phenotyped individuals from their SNP genotype data. \n",
+    "\n",
+    "__Method__:\n",
+    "    The imputed expression can then be viewed as a linear model of genotypes with _weights based on the correlation between SNPs and gene expression__ in the training data while accounting for linkage disequilibrium (LD) SNPs. We then correlated the imputed gene expression to the trait to perform a transcriptome-wide association study (TWAS) and identify significant expression-trait associations. \n",
     " \n",
-    "The weights are computed via variouse models: blup, bslmm,lasso,top1 and enet. blup(best linear unbiased predictors)/bslmm(Bayesian linear mixed model) are conducted using gemma, lasso using plink,and enet(elastic net) using \tcv.glmnet function in R.\n",
+    "The weights are computed via various models: blup, bslmm, lasso,top1, and enet. BLUP(best linear unbiased predictors)/bslmm(Bayesian linear mixed model) are conducted using gemma, lasso using plink, and enet (elastic net) using cv.glmnet function in R.\n",
     "\n",
-    "Before the weight calculation, heritability of each genes are computed using GCTA, genes with insignificant heritability were screened out"
+    "Before the weight calculation, the heritability of each gene are computed using GCTA; genes with insignificant heritability were screened out."
    ]
   },
   {
@@ -69,36 +74,32 @@
    "source": [
     "# Input and Output\n",
     "## Input\n",
-    "- `--gene_exp_file`, including a gene expression table with gene name as rows and sample as column. Each gene also required at least one column specifing the chr and pos(or alternatively Start and End position), the chr column shall have the same formation as how the chromosome are specified in the genotype file. The sample names shall be the same as the sample ID in the genotype file. \n",
-    "- `--geno-path`, the path of a genotype inventory, which lists the path of all genotype file in bgen format or in plink format.\n",
-    "- `--genotype_file_directory`, path to the genotype inventory, list the path of all genotype file in plink format.\n",
-    "- `--genotype_prefix`, the prefix of the genotype file, up to the chromosome name.\n",
+    "- `--gwas_sumstat` The GWAS sum stat text file documenting the associations between the SNP and the disease. It shall contain at least four column: the SNP rsID, the effect allele, the other allele, and the Z-score describing the relationship between the SNP and the disease. \n",
+    "- `--genotype_list` An index text file with two columns of chromosome and the corresponding PLINK bed file.\n",
+    "- `--molecular-pheno`, The text file containing the table describing the molecular phenotype. It shall have regions(genes) as rows and samples as columnes\n",
+    "- `--region_list` The text file with 4 columns specifying the #Chr, P0 (Start position), P1(End position) and names of regions to analyze. The name of the column is not important but the order of the columns. It is also important that the column name of the first column starts with a #. The region_list can can be generated by using another sos pipeline SOS_ROSMAP_gene_exp_processing.ipynb.\n",
+    "- `--window` the region span from the specify start and end site for the cis-gene. If the gene expression only have one position column, set the window to a large number like 5E5.\n",
     "- `--window` the region span from the specify start and end site for the cis-gene. If the gene expression only have one position column, set the window to a large number like 5E5.\n",
     "\n",
-    "**FIXME: Hao, text below are moved from your analysis code. This information should belong to input data section**\n",
     "\n",
-    "```\n",
-    "# PATH TO DIRECTORY CONTAINING genotype_file_directory DATA (FROM FUSION WEBSITE or https://data.broadinstitute.org/alkesgroup/FUSION/genotype_file_directory.tar.bz2)\n",
-    "# THIS IS USED TO RESTRICT INPUT SNPS TO REFERENCE IDS ONLY\n",
-    "# GEUVADIS DATA WAS DOWNLOADED FROM https://www.ebi.ac.uk/arrayexpress/experiments/E-GEUV-1/files/analysis_results/\n",
-    "```\n",
+    "\n",
+    "\n",
     "\n",
     "**FIXME: here are also some text i dug up later in your workflow codes. Please explain them up-front. We would not expect users to read this notebook beyong the \"Working example \" section**\n",
+    "This probably is served as a self reminder of what each file do and therefore not expected the user to see, so maybe move them back?\n",
     "\n",
     "```\n",
     "1. The gene expression pheno type, a three column table for each genes, with the first two columns specifing the family ID and within family ID of the samples. In the current case where all samples are unrelated, the first two columns are simply sample ID. The third column is the actual gene expression value.\n",
     "2. The plink trio file for each specific genes, containing only the snps corresponding th the regions whose expression are recorded. In particular, the snp are filtered according to the genetics regions outlined by Position+/-windows.\n",
     "```\n",
     "\n",
-    "Also I changed your genotype file input to a `genotype_list`: An index text file with two columns of chromosome and the corresponding PLINK bed file.\n",
+    "\n",
     "\n",
     "## Output\n",
     "\n",
-    "-- .wgt.Rdat The actualy weight data that are computed\n",
-    "\n",
-    "-- .hsq the file containing the heritibality information for the genes\n",
-    "\n",
-    "-- .All_passed_gene.hsq the file that containing the heritibality information for all the genes in this run\n",
+    "- `.wgt.Rdat` The actual weight data that are computed.\n",
+    "- `.weight_list.txt` The index text file recording information about each of the wgt.Rdat data, including the filename, corresponding region ID, Chromosomes, start and end position, heritability, and the SE and P-value of the heritability.\n",
+    "- `.dat` the actual TWAS association of the genes, a detailed description of this output are outlined here:http://gusevlab.org/projects/fusion/\n",
     "\n",
     "\n",
     " \n",
@@ -220,7 +221,7 @@
    "source": [
     "## Test pipeline with test data\n",
     "## Switch back to abosolute path, otherwise there will be file not found error in step 5\n",
-    "sos run twas_fusion.ipynb twas_fusion \\\n",
+    "sos dryrun twas_fusion.ipynb twas_fusion \\\n",
     "  --gwas_sumstat /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/sum_stat.sumstats \\\n",
     "  --molecular-pheno /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/gene_exp_file.txt \\\n",
     "  --wd /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/Working_at \\\n",
@@ -252,16 +253,40 @@
     "kernel": "Bash"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sos run twas_fusion.ipynb association_test \\\n",
+    "  --gwas_sumstat /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/sum_stat.sumstats \\\n",
+    "  --molecular-pheno /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/gene_exp_file.txt \\\n",
+    "  --wd /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/Working_at \\\n",
+    "  --genotype_list /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/ld_ref \\\n",
+    "  --region_list /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/region_list.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 5 \\\n",
+    "  --output_path /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/At_output \\\n",
+    "  --window 500000 \\\n",
+    "  --model blup lasso top1 enet \\\n",
+    "  --container gaow/twas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "kernel": "Bash"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Workflow\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 5,
    "metadata": {
     "kernel": "SoS"
    },
@@ -296,6 +321,8 @@
     "parameter: weights_path = f'{wd:a}/WEIGHTS'\n",
     "# Path to list of weights\n",
     "parameter: weights_list = f'{weights_path}/{molecular_pheno:bn}.weights_list.txt'\n",
+    "# Path to store the output folder\n",
+    "parameter: output_path = f'{wd:a}/result'\n",
     "# Specify the column in the molecular_pheno file that contains the name of the region of interest\n",
     "parameter: region_name = int\n",
     "# Specify the column in the molecular_pheno file where the actual data start\n",
@@ -310,6 +337,7 @@
     "parameter: container = 'gaow/twas'\n",
     "# Get regions of interest to focus on.\n",
     "regions = [x.strip().split() for x in open(region_list).readlines() if x.strip() and not x.strip().startswith('#')]\n",
+    "\n",
     "geno_inventory = dict([x.strip().split() for x in open(genotype_list).readlines() if x.strip() and not x.strip().startswith('#')])\n",
     "\n",
     "import os\n",
@@ -318,7 +346,7 @@
     "    if chrom.startswith('chr'):\n",
     "        chrom = chrom[3:]\n",
     "    if chrom not in geno_inventory:\n",
-    "        geno_file = \"error\"\n",
+    "        geno_file = f'{chrom}'\n",
     "    else:\n",
     "        geno_file = geno_inventory[chrom]\n",
     "    if not os.path.isfile(geno_file):\n",
@@ -337,18 +365,13 @@
     "kernel": "SoS"
    },
    "source": [
-    "## FIXME: add explanation what this step is\n",
-    "\n",
-    "Comments & FIXME:\n",
-    "\n",
-    "1. This step should not allow for any errors. In general, we should not bypass errors, but rather face and fix them if they are under our control. I therefore changed `cat` to `stop`. In the future please try to avoid using allow error.\n",
-    "2. I added `#` to the header of region_list file and skipped any lines starting with `#`. Please see global section `regions` variable.\n",
-    "3. Notice the use of `:a` -- please always use that to make output files absolute paths. Then it would not matter where your work directory is. You only have to do it for the very first step of the workflow."
+    "## Partition of the molecular phenotype for each genes\n",
+    "This step extracts the molecular phenotype for each gene and transposes them into the formats needed in the follow-up analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 11,
    "metadata": {
     "kernel": "SoS"
    },
@@ -380,11 +403,11 @@
     "kernel": "SoS"
    },
    "source": [
-    "## FIXME: please document it briefly\n",
+    "## Construction of Plink trio for each gene\n",
+    "This step constructs the plink file for each gene based on the output of previous steps. Specifically it:\n",
     "\n",
-    "Here we use `|| true` to bypass any errors (it ensures return status of the command is always `0`)\n",
-    "\n",
-    "Notice the use of `group_with` which removes the need to extract region information from previous output files."
+    "1. Selects only the SNPs within the start and end position of the corresponding region (gene)\n",
+    "2. Replaces the Phenotype value (last column) of the .fam based on the input\n"
    ]
   },
   {
@@ -423,9 +446,13 @@
     "kernel": "SoS"
    },
    "source": [
-    "## FIXME: please document it briefly\n",
+    "## Computation of Weight\n",
+    "This step computes the association between the phenotype and each of the SNPs. Specifically it:\n",
+    "1. Estimates and documents the heritability (Ratio of genetics variance and phenotypic variance) of each region (gene)\n",
     "\n",
-    "Comment: Your modified version of `FUSION.compute_weights.R` has hard-coded path `./output` which is not desiable. I have changed it to use `dirname(output)`"
+    "2. for those regions with significant heritability\n",
+    "    1. Compute the association with the model specified for each SNPs\n",
+    "    2. Stored the output in a wgt.RData for each region.\n"
    ]
   },
   {
@@ -463,11 +490,8 @@
     "kernel": "SoS"
    },
    "source": [
-    "## FIXME: Please document\n",
-    "\n",
-    "Comment: it's a lot cleaner to just code with SoS (using python syntax). See example below where I rewrote your R code.\n",
-    "\n",
-    "Also I merged the contents of hsq files into the output list. Please fix the header of the file: replace `HSQ1` `HSQ2` and `HSQ3` with proper, informative column names."
+    "## Creation of weight index\n",
+    "This step creates an index documenting the information about each of the weight data, including the filename, corresponding region ID, Chromosomes, start and end position, heritability, and the SE and P-value of the heritability."
    ]
   },
   {
@@ -480,11 +504,11 @@
    "source": [
     "[twas_fusion_4]\n",
     "input: group_by = \"all\"\n",
-    "output: weights_list\n",
+    "output: \"gene_exp_file.weights_list.txt\"\n",
     "import os\n",
     "weight_files = [x for x in _input if not os.path.getsize(x) == 0]\n",
     "regions_dict = dict([(x[3], (x[0], x[1], x[2])) for x in regions])\n",
-    "res = [[\"WGT\", \"ID\",\"CHR\",\"P0\",\"P1\",\"HSQ1\",\"HSQ2\",\"HSQ3\"]]\n",
+    "res = [[\"WGT\", \"ID\",\"CHR\",\"P0\",\"P1\",\"Heritability\",\"Heritability_SE\",\"Heritability_LRT_P_val\"]]\n",
     "for item in weight_files:\n",
     "    name = f'{item:bnn}'.lstrip(f'.{molecular_pheno:bn}')\n",
     "    hsq = open(f\"{item:nn}.hsq\").read().strip().split()\n",
@@ -499,9 +523,8 @@
     "kernel": "SoS"
    },
    "source": [
-    "## FIXME: please document\n",
-    "\n",
-    "comment: I customized a copy of `FUSION.assoc_test.R` to use geno_file directoy. This removes the need to get `geno_prefix`"
+    "## Conducting of association test\n",
+    "This step conduct the association test by modifying SNPs' association and traits of interests with the association between SNPs and the molecular phenotypes."
    ]
   },
   {
@@ -519,17 +542,17 @@
     "chrom_list = list(set(get_output(f'cut -f 3 {_input} | tail -n+2').strip().split(\"\\n\")))\n",
     "\n",
     "input: gwas_sumstat, for_each = \"chrom_list\"\n",
-    "output:f'{wd:a}/{gwas_sumstat:bn}_chr{_chrom_list}.twas.txt'\n",
+    "output:f'{gwas_sumstat:n}_chr{_chrom_list}.twas.txt'\n",
     "\n",
     "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container\n",
-    "    FUSION.assoc_test.R \\\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout'\n",
+    "    Rscript /Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Workflow/FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
     "    --weights $[weights_list] \\\n",
     "    --weights_dir / \\\n",
     "    --ref_ld_chr $[geno_file] \\\n",
     "    --chr $[_chrom_list] \\\n",
-    "    --out $[_output]"
+    "    --out $[output_path]"
    ]
   },
   {
@@ -538,9 +561,8 @@
     "kernel": "SoS"
    },
    "source": [
-    "## FIXME: please document\n",
-    "\n",
-    "comment: There is no need for `rm` because we can always remove whatever under `cache` altogether."
+    "# Documentation of dummy file\n",
+    "For the pipeline to run smoothly, dummy files were created in previous steps. This step finds all the dummy files and records them into a separate file."
    ]
   },
   {
@@ -560,6 +582,36 @@
     "    find $[wd:a]/cache/*.bim -size 0 -print > $[_output[0]]\n",
     "    find $[weights_path]/*.wgt.RDat -size 0 -print > $[_output[1]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "kernel": "Bash"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Restarting kernel \"Bash\"\n",
+      "/Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Workflow\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -593,7 +645,7 @@
      "sos"
     ]
    ],
-   "version": "0.21.13"
+   "version": "0.20.1"
   }
  },
  "nbformat": 4,
