Fix the description

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -545,8 +545,8 @@
     "output:f'{gwas_sumstat:n}_chr{_chrom_list}.twas.txt'\n",
     "\n",
     "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout'\n",
-    "    Rscript /Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/freshcopy/neuro-twas/Workflow/FUSION.assoc_test.R \\\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout',container = container\n",
+    "    FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
     "    --weights $[weights_list] \\\n",
     "    --weights_dir / \\\n",
