Fix genotype file mount path

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -355,8 +355,7 @@
     "            raise ValueError(f\"Cannot find genotype file {geno_file}\")\n",
     "        else:\n",
     "            geno_file = f'{genotype_list:ad}/' + geno_file\n",
-    "    geno_file = geno_file.split(\".b\",1)[0]\n",
-    "    return f'{geno_file}'"
+    "    return path(geno_file)"
    ]
   },
   {
@@ -426,9 +425,9 @@
     "# look up for genotype file\n",
     "geno_file = get_genotype_file(_regions[0],genotype_list,geno_inventory)\n",
     "\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    ##### Get the locus genotypes for $[_regions[3]]\n",
-    "    plink --bfile $[geno_file] \\\n",
+    "    plink --bfile $[geno_file:an] \\\n",
     "    --pheno $[_input[1]] \\\n",
     "    --make-bed \\\n",
     "    --out $[_output[0]:n] \\\n",
@@ -545,12 +544,12 @@
     "output:f'{gwas_sumstat:n}_chr{_chrom_list}.twas.txt'\n",
     "\n",
     "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout',container = container\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
     "    --weights $[weights_list] \\\n",
     "    --weights_dir / \\\n",
-    "    --ref_ld_chr $[geno_file] \\\n",
+    "    --ref_ld_chr $[geno_file:an] \\\n",
     "    --chr $[_chrom_list] \\\n",
     "    --out $[output_path]"
    ]
@@ -645,7 +644,7 @@
      "sos"
     ]
    ],
-   "version": "0.20.1"
+   "version": "0.21.13"
   }
  },
  "nbformat": 4,
