debuging job submitted

--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -562,7 +562,7 @@
     "# look up for genotype file\n",
     "geno_file = get_genotype_file(_regions[0],genotype_list,geno_inventory)\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container,engine = \"singularity\", volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    ##### Get the locus genotypes for $[_regions[3]]\n",
     "    plink --bfile $[geno_file:an] \\\n",
     "    --pheno $[_input[1]] \\\n",
@@ -606,7 +606,7 @@
     "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', container = container,engine = \"singularity\"\n",
+    "bash: expand= \"$[ ]\",stderr = f'{_output[0]:nn}.stderr', stdout = f'{_output[0]:nn}.stdout', container = container\n",
     "    FUSION.compute_weights.R \\\n",
     "    --bfile $[_input[0]:n] \\\n",
     "    --tmp $[_input[0]:n].tmp \\\n",
@@ -681,7 +681,7 @@
     "\n",
     "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, engine = \"singularity\", volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
+    "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
     "    --weights $[weights_list] \\\n",
