Change the start and the mem resource for Association_test steps

--- a/Analysis/ROSMAP_TWAS/Pipeline_testing_Rosmap_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Pipeline_testing_Rosmap_analysis.ipynb
@@ -527,6 +527,30 @@
    },
    "outputs": [],
    "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/test/sum_stat.sumstats \\\n",
+    "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
+    "  --wd /home/hs3163/Project/test \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list ~/Project/test/30-200/test_region_list.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --output_path /home/hs3163/Project/test \\\n",
+    "  --window 500000 \\\n",
+    "  --model blsmm blup lasso top1 enet \\\n",
+    "  --container /home/hs3163/system_file/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  -J 6 -q csg -c ~/GIT/neuro-twas/template/csg.yml &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "Bash"
+   },
+   "outputs": [],
+   "source": [
     "paste 'cut *weight* -f 2` `'cut *weight* -f 3` 'cut *weight* -f 4` 'cut *weight* -f 5` > passed_region.txt"
    ]
   },
