--- a/Theory and Method/Heritability.ipynb
+++ b/Theory and Method/Heritability.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "heritability then is therefore simply the ratio between the estimated $\\sigma_{i}^{2}\\ and V\n",
     "\n",
-    "The estimated heritability is then compared with zero with a likelyhood \n"
+    "The estimated heritability is then compared with zero with a likelyhood ratio test with 0.01 significance.\n"
    ]
   },
   {
