--- a/Workflow/twas_fusion.ipynb
+++ b/Workflow/twas_fusion.ipynb
@@ -352,7 +352,7 @@
    "source": [
     "## Test pipeline with test data\n",
     "## Switch back to abosolute path, otherwise there will be file not found error in step 5\n",
-    "sos run twas_fusion.ipynb twas_fusion \\\n",
+    "sos run twas_fusion.ipynb association_test \\\n",
     "  --gwas_sumstat ./data/sum_stat.sumstats \\\n",
     "  --molecular-pheno ./data/gene_exp_file.txt \\\n",
     "  --wd ./ \\\n",
@@ -461,13 +461,14 @@
     "parameter: window = 50000\n",
     "# Specify the number of jobs per run.\n",
     "parameter: job_size = 2\n",
-    "\n",
+    "# Specify the minumum p value for heratibility for the study to continue\n",
+    "parameter: hsq_p = 0.01\n",
     "\n",
     "\n",
     "\n",
     "# Specify what model are used to compute weights.\n",
     "# Notice that `blsmm` can be very resource consuming.\n",
-    "parameter: model = ['blsmm', 'blup' , 'lasso', 'top1', 'enet']\n",
+    "parameter: model = ['bslmm', 'blup' , 'lasso', 'top1', 'enet']\n",
     "# Container option for software to run the analysis: docker or singularity\n",
     "parameter: container = 'gaow/twas'\n",
     "# Get regions of interest to focus on.\n",
@@ -613,7 +614,8 @@
     "    --save_hsq \\\n",
     "    --PATH_gcta `which gcta64` \\\n",
     "    --PATH_gemma `which gemma` \\\n",
-    "    --models \"$[\",\".join(model)]\"   \n",
+    "    --models \"$[\",\".join(model)]\"  \\\n",
+    "    --hsq_p $[hsq_p]\n",
     "    ## Creat dummy output file that will be deleted next step\n",
     "    touch $[_output]"
    ]
@@ -672,14 +674,14 @@
     "# Association test\n",
     "[twas_fusion_5, association_test]\n",
     "depends: weights_list\n",
-    "chrom_list = list(set(get_output(f'cut -f 3 {_input} | tail -n+2').strip().split(\"\\n\")))\n",
+    "chrom_list = list(set(get_output(f'cut -f 3 {weights_list} | tail -n+2').strip().split(\"\\n\")))\n",
     "# Path to GWAS summary statistics data (association results between SNP and disease in a GWAS)\n",
     "parameter: gwas_sumstat = path\n",
     "input: gwas_sumstat, for_each = \"chrom_list\"\n",
     "output:f'{output_path}/{gwas_sumstat:bn}_chr{_chrom_list}.twas.txt'\n",
     "\n",
     "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '12G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = '24G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{geno_file:ad}:{geno_file:ad}']\n",
     "    FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
@@ -715,7 +717,11 @@
     "        f'{wd:a}/error_no_wgt_computed.log'\n",
     "bash: expand= \"$[ ]\"\n",
     "    find $[wd:a]/cache/*.bim -size 0 -print > $[_output[0]]\n",
-    "    find $[weights_path]/*.wgt.RDat -size 0 -print > $[_output[1]]"
+    "    find $[weights_path]/*.wgt.RDat -size 0 -print > $[_output[1]]\n",
+    "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' *wei* > Alz_passed_gene_region_list.txt\n",
+    "    awk '{ print $3 \" \" $4 \" \" $5 \" \" $2 \" \"}' *wei* > All_hsq_list.txt\n",
+    "\n",
+    "\n"
    ]
   },
   {
